--- a/index.html
+++ b/index.html
@@ -5,5 +5,7 @@
         <title>CSCH Tutor Program</title>
         <link rel="stylesheet" href="style.css" />
     </head>
-    <body></body>
+    <body>
+        <div id="scroller"></div>
+    </body>
 </html>
