--- a/index.html
+++ b/index.html
@@ -6,6 +6,17 @@
         <link rel="stylesheet" href="style.css" />
     </head>
     <body>
-        <div id="scroller"></div>
+        <div id="scroller">
+            <div class="section">
+                <div class="centered" style="text-align: center;">
+                    <h1 style="color: gold;">CSCH Tutors</h1>
+                </div>
+            </div>
+            <div class="section">
+                <div class="centered" style="text-align: center;">
+                    <h1 style="color: gold;">ello</h1>
+                </div>
+            </div>
+        </div>
     </body>
 </html>
