--- a/index.html
+++ b/index.html
@@ -14,6 +14,10 @@
             <div class="section">
                 <div class="centered" style="text-align: center;">
                     <h1 style="color: gold;">CSCH Tutors</h1>
+                    <a href="https://docs.google.com/forms/d/e/1FAIpQLSeit1fAdAJDUorLz8Z7t2QJF6PA98TZ14VqdeEbzsOCxqctJQ/viewform">
+                        <button>Register Now</button>
+                    </a>
+
                 </div>
             </div>
             <div class="section" style="background-color: #110000;">
@@ -21,10 +25,6 @@
                     <h2 style="color: lime;">About Us</h2>
                     <p style="color: white;">
                         Our initial goal was to help close the achievement gap between native and nonnative Chinese speakers at Glenwood elementary school with a volunteer tutor program. The program has expanded since then, and is now currently helping younger students learn a variety of subjects, such as Math, English, and foreign languages like French and Chinese. The program is currently comprised of around 30 tutors and students but we are always looking for more!
-                        
-                    <br /> <br />
-                        <a href="https://docs.google.com/forms/d/e/1FAIpQLSeit1fAdAJDUorLz8Z7t2QJF6PA98TZ14VqdeEbzsOCxqctJQ/viewform">Register Now</a>
-
                     </p>
                 </div>
             </div>
