--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     </head>
     <body>
         <div id="scroller">
-            <div class="section">
+            <div class="section" id="home">
                 <div class="centered" style="text-align: center;">
                     <h1 style="color: gold;">CSCH Tutors</h1>
                     <a href="https://docs.google.com/forms/d/e/1FAIpQLSeit1fAdAJDUorLz8Z7t2QJF6PA98TZ14VqdeEbzsOCxqctJQ/viewform">
@@ -20,7 +20,7 @@
 
                 </div>
             </div>
-            <div class="section" style="background-color: #110000;">
+            <div class="section" style="background-color: #110000;" id="about">
                 <div class="centered" style="text-align: center;">
                     <h2 style="color: lime;">About Us</h2>
                     <p style="color: white;">
@@ -28,7 +28,7 @@
                     </p>
                 </div>
             </div>
-            <div class="section">
+            <div class="section" id="becomeTutor">
                 <div class="centered" style="text-align: center;">
                     <h2 style="color: red;">Help Wanted</h2>
                     <p style="color: white;">
@@ -38,6 +38,11 @@
                     </p>
                 </div>
             </div>
+        </div>
+        <div id="navbar">
+            <a href="#home">Home</a>
+            <a href="#about">About</a>
+            <a href="#becomeTutor">Become a Tutor</a>
         </div>
     </body>
 </html>
