--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
                 <div class="centered" style="text-align: center;">
                     <h1 style="color: gold;">CSCH Tutors</h1>
                     <a href="https://docs.google.com/forms/d/e/1FAIpQLSeit1fAdAJDUorLz8Z7t2QJF6PA98TZ14VqdeEbzsOCxqctJQ/viewform">
-                        <button>Register Now</button>
+                        <button style="cursor: pointer;">Register Now</button>
                     </a>
 
                 </div>
