Update color scheme

--- a/index.html
+++ b/index.html
@@ -11,24 +11,24 @@
     </head>
     <body>
         <div id="scroller">
-            <div class="section" id="home">
+            <div class="section" id="home" style="background-color: #210000;">
                 <div class="centered" style="text-align: center;">
-                    <h1 style="color: gold;">CSCH Tutors</h1>
+                    <h1 style="color: goldenrod;">CSCH Tutors</h1>
                     <a href="https://docs.google.com/forms/d/e/1FAIpQLSeit1fAdAJDUorLz8Z7t2QJF6PA98TZ14VqdeEbzsOCxqctJQ/viewform">
                         <button style="cursor: pointer;">Register Now</button>
                     </a>
 
                 </div>
             </div>
-            <div class="section" style="background-color: #110000;" id="about">
+            <div class="section" style="background-color: #110011;" id="about">
                 <div class="centered" style="text-align: center;">
-                    <h2 style="color: lime;">About Us</h2>
+                    <h2 style="color: darkorange;">About Us</h2>
                     <p style="color: white;">
                         Our initial goal was to help close the achievement gap between native and nonnative Chinese speakers at Glenwood elementary school with a volunteer tutor program. The program has expanded since then, and is now currently helping younger students learn a variety of subjects, such as Math, English, and foreign languages like French and Chinese. The program is currently comprised of around 30 tutors and students but we are always looking for more!
                     </p>
                 </div>
             </div>
-            <div class="section" id="becomeTutor">
+            <div class="section" id="becomeTutor" style="background-color: #001600;">
                 <div class="centered" style="text-align: center;">
                     <h2 style="color: red;">Help Wanted</h2>
                     <p style="color: white;">
