--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <div class="section" id="home" style="background-color: #210000;">
                 <div class="centered" style="text-align: center;">
                     <h1 style="color: goldenrod;">CSCH Tutors</h1>
-                    <a href="https://docs.google.com/forms/d/e/1FAIpQLSeit1fAdAJDUorLz8Z7t2QJF6PA98TZ14VqdeEbzsOCxqctJQ/viewform">
+                    <a href="https://docs.google.com/forms/d/e/1FAIpQLSeit1fAdAJDUorLz8Z7t2QJF6PA98TZ14VqdeEbzsOCxqctJQ/viewform" target="_blank">
                         <button style="cursor: pointer;">Register Now</button>
                     </a>
 
@@ -34,7 +34,7 @@
                     <p style="color: white;">
                         Would appreciate tutors, organizers and students!
                         <br /> <br />
-                        <a href="https://docs.google.com/forms/d/e/1FAIpQLSdS3Rl_O2zTFiybU80ijr7lcgIPZWuY05z4YoH-h1k1OhlDKw/viewform">Become a tutor</a>
+                        <a href="https://docs.google.com/forms/d/e/1FAIpQLSdS3Rl_O2zTFiybU80ijr7lcgIPZWuY05z4YoH-h1k1OhlDKw/viewform" target="_blank">Become a tutor</a>
                     </p>
                 </div>
             </div>
