Update Help Wanted page

--- a/index.html
+++ b/index.html
@@ -32,7 +32,9 @@
                 <div class="centered" style="text-align: center;">
                     <h2 style="color: red;">Help Wanted</h2>
                     <p style="color: white;">
-                        Would appreciate tutors, organizers and students!
+                        Become a tutor and share your knowledge!
+                        <br />
+                        You MUST have taken a high school course relavent to the subject.
                         <br /> <br />
                         <a href="https://docs.google.com/forms/d/e/1FAIpQLSdS3Rl_O2zTFiybU80ijr7lcgIPZWuY05z4YoH-h1k1OhlDKw/viewform" target="_blank">Become a tutor</a>
                     </p>
