--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
         <div id="scroller">
             <div class="section" id="home" style="background-color: #210000;">
                 <div class="centered" style="text-align: center;">
-                    <h1 style="color: goldenrod;">CSCH Tutors</h1>
+                    <h1 style="color: goldenrod;">CSCH Tutoring Program</h1>
+                    <i style="color: white;">活到老，学到老</i><br /><br />
                     <a href="https://docs.google.com/forms/d/e/1FAIpQLSeit1fAdAJDUorLz8Z7t2QJF6PA98TZ14VqdeEbzsOCxqctJQ/viewform" target="_blank">
                         <button style="cursor: pointer;">Register Now</button>
                     </a>
