Add contact emails

--- a/index.html
+++ b/index.html
@@ -41,11 +41,27 @@
                     </p>
                 </div>
             </div>
+            <div class="section" id="contact">
+                <div class="centered" style="text-align: center;">
+                    <h2 style="color: orange;">Contact Us</h2>
+                    <p style="color: white;">
+                        Our emails:<br />
+                        <a href="mailto:raymond.yang@csch-nc.org">raymond.yang@csch-nc.org</a><br />
+                        <a href="mailto:angela.yang@csch-nc.org">angela.yang@csch-nc.org</a><br />
+                        <a href="mailto:andrew.wang@csch-nc.org">andrew.wang@csch-nc.org</a><br />
+                        <a href="mailto:luke.ni@csch-nc.org">luke.ni@csch-nc.org</a><br />
+                        <a href="mailto:jett.mu@csch-nc.org">jett.mu@csch-nc.org</a><br />
+                        <a href="mailto:ryan.kilgallen@csch-nc.org">ryan.kilgallen@csch-nc.org</a><br /><br />
+                        You can also reach us at <a href="mailto:tutor@csch-nc.org">tutor@csch-nc.org</a>.
+                    </p>
+                </div>
+            </div>
         </div>
         <div id="navbar">
             <a href="#home">Home</a>
             <a href="#about">About</a>
             <a href="#becomeTutor">Become a Tutor</a>
+            <a href="#contact">Contact</a>
         </div>
     </body>
 </html>
