Add CSCH logo & Learn More button

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
         <div id="scroller">
             <div class="section" id="home" style="background-color: #210000;">
                 <div class="centered" style="text-align: center;">
+                    <img src="CSCH_Logo_1.png" alt="Chinese School at Chapel Hill, NC" height="69" draggable="false" />
                     <h1 style="color: goldenrod;">CSCH Tutoring Program</h1>
                     <i style="color: white;">活到老，学到老</i><br /><br />
                     <a href="https://docs.google.com/forms/d/e/1FAIpQLSeit1fAdAJDUorLz8Z7t2QJF6PA98TZ14VqdeEbzsOCxqctJQ/viewform" target="_blank">
@@ -27,6 +28,9 @@
                     <p style="color: white;">
                         Our initial goal was to help close the achievement gap between native and nonnative Chinese speakers at Glenwood elementary school with a volunteer tutor program. The program has expanded since then, and is now currently helping younger students learn a variety of subjects, such as Math, English, and foreign languages like French and Chinese. The program is currently comprised of around 30 tutors and students but we are always looking for more!
                     </p>
+                    <br uh />
+                    <a href="https://docs.google.com/document/d/1_L_ZN9YHYjW_hBfwvYD7UECndUd88ocgk_4OPQuVb5E/preview" target="_blank"><button>Learn More</button></a>
+                    <br uh /><br uh /><br uh /><br uh /><br uh /><br uh /><br uh /><br uh /><br uh /><br uh /><br uh />
                 </div>
             </div>
             <div class="section" id="becomeTutor" style="background-color: #001600;">
