Fix buttons (cursor: pointer;)

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                     <h1 style="color: goldenrod;">CSCH Tutoring Program</h1>
                     <i style="color: white;">活到老，学到老</i><br /><br />
                     <a href="https://docs.google.com/forms/d/e/1FAIpQLSeit1fAdAJDUorLz8Z7t2QJF6PA98TZ14VqdeEbzsOCxqctJQ/viewform" target="_blank">
-                        <button style="cursor: pointer;">Register Now</button>
+                        <button>Register Now</button>
                     </a>
 
                 </div>
