Add registration page

--- a/index.html
+++ b/index.html
@@ -17,7 +17,10 @@
                     <h1 style="color: goldenrod;">CSCH Tutoring Program</h1>
                     <i style="color: white;">活到老，学到老</i><br /><br />
                     <a href="https://docs.google.com/forms/d/e/1FAIpQLSeit1fAdAJDUorLz8Z7t2QJF6PA98TZ14VqdeEbzsOCxqctJQ/viewform" target="_blank">
-                        <button>Register Now</button>
+                        <button>Register Now</button></a>
+                    <span style="white-space: pre;">  </span>
+                    <a href="https://forms.gle/r5non2eeJbifUxud7" target="_blank">
+                        <button>Become a Tutor</button>
                     </a>
 
                 </div>
@@ -31,6 +34,16 @@
                     <br uh />
                     <a href="https://docs.google.com/document/d/1_L_ZN9YHYjW_hBfwvYD7UECndUd88ocgk_4OPQuVb5E/preview" target="_blank"><button>Learn More</button></a>
                     <br uh /><br uh /><br uh /><br uh /><br uh /><br uh /><br uh /><br uh /><br uh /><br uh /><br uh />
+                </div>
+            </div>
+            <div class="section" id="registration" style="background-color: #111111;">
+                <div class="centered" style="text-align: center;">
+                    <h2 style="color: green;">Register</h2>
+                    <p style="color: white;">
+                        Need help with school work? Want to expand your knowledge?
+                        <br /> <br />
+                        <a href="https://forms.gle/r5non2eeJbifUxud7" target="_blank">Sign up for tutoring</a>
+                    </p>
                 </div>
             </div>
             <div class="section" id="becomeTutor" style="background-color: #001600;">
@@ -64,7 +77,8 @@
         <div id="navbar">
             <a href="#home">Home</a>
             <a href="#about">About</a>
-            <a href="#becomeTutor">Become a Tutor</a>
+            <a href="#registration">Registration</a>
+            <a href="#becomeTutor">Join the Team</a>
             <a href="#contact">Contact</a>
         </div>
     </body>
