--- a/index.html
+++ b/index.html
@@ -58,6 +58,17 @@
                     </p>
                 </div>
             </div>
+            <div class="section" id="flyers" style="background-color: #210000;">
+                <div class="centered" style="text-align: center;">
+                    <h2 style="color: dodgerblue;">Flyers</h2>
+                    <p>
+                        <a href="flyers/chapelhillhigh.pdf" target="_blank">Chapel Hill High Flyer</a>
+                    </p>
+                    <p>
+                        <a href="flyers/openhouse.pdf" target="_blank">Open House Flyer</a>
+                    </p>
+                </div>
+            </div>
             <div class="section" id="contact">
                 <div class="centered" style="text-align: center;">
                     <h2 style="color: orange;">Contact Us</h2>
@@ -79,6 +90,7 @@
             <a href="#about">About</a>
             <a href="#registration">Registration</a>
             <a href="#becomeTutor">Join the Team</a>
+            <a href="#flyers">Flyers</a>
             <a href="#contact">Contact</a>
         </div>
     </body>
