Volunteer hours info

--- a/index.html
+++ b/index.html
@@ -55,6 +55,14 @@
                         You MUST have taken a high school course relavent to the subject.
                         <br /> <br />
                         <a href="https://docs.google.com/forms/d/e/1FAIpQLSdS3Rl_O2zTFiybU80ijr7lcgIPZWuY05z4YoH-h1k1OhlDKw/viewform" target="_blank">Become a tutor</a>
+                        <br /> <br />
+                        Tutors can receive volunteer hours.
+                        <br />
+                        In order to track volunteer hours, we request that for EVERY tutoring session done, the Volunteer Hours Confirmation Form must be completed. BOTH the tutor and student must fill out the form, so we can confirm that the session has occured.
+                        <br /> <br />
+                        <a href="https://forms.gle/gm79Z6i3bJvT8XCj9" target="_blank"><button>Volunteer Hours Confirmation Form</button></a>
+                        <br /> <br />
+                        <a href="https://docs.google.com/presentation/d/1I_Yufu5V17flhCm1n2sFKfJqBx7AbdhYz-s7IzbqBDA/preview" target="_blank">Learn how to record your hours on LetServe</a>
                     </p>
                 </div>
             </div>
