--- a/index.html
+++ b/index.html
@@ -87,7 +87,8 @@
                         <a href="mailto:andrew.wang@csch-nc.org">andrew.wang@csch-nc.org</a><br />
                         <a href="mailto:luke.ni@csch-nc.org">luke.ni@csch-nc.org</a><br />
                         <a href="mailto:jett.mu@csch-nc.org">jett.mu@csch-nc.org</a><br />
-                        <a href="mailto:ryan.kilgallen@csch-nc.org">ryan.kilgallen@csch-nc.org</a><br /><br />
+                        <a href="mailto:ryan.kilgallen@csch-nc.org">ryan.kilgallen@csch-nc.org</a><br />
+                        <a href="mailto:jaden.mu@csch-nc.org">jaden.mu@csch-nc.org</a><br /><br />
                         You can also reach us at <a href="mailto:tutor@csch-nc.org">tutor@csch-nc.org</a>.
                     </p>
                 </div>
