--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     </head>
     <body>
         <div id="scroller">
-            <div class="section" id="home" style="background-color: #210000;">
+            <div class="section" id="home" style="background-image: url(bgs/lanternbg.jpg);">
                 <div class="centered" style="text-align: center;">
                     <img src="CSCH_Logo_1.png" alt="Chinese School at Chapel Hill, NC" height="69" draggable="false" />
                     <h1 style="color: goldenrod;">CSCH Tutoring Program</h1>
